--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="style/Style.css">
-<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fira+Sans:wght@500&family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Fira+Sans:wght@500&family=Pacifico&display=swap" rel="stylesheet">
+    
+    <!--owl jquery-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
     <title>ClassMovie</title>
 </head>
 <body>
-    <head class="container">
-        <nav class="container-menu">
+    <header>
+        <nav class="container">
             <div class="logo">
                 <h1>Class</h1><h1 class="move">Movie</h1>
             </div>
             <div class="menu">
                 <a href="#">Home</a>    
-                <a href="#">Anos 90</a>      
-                <a href="#">Anos 80</a>   
-                <a href="#">Anos 70</a>   
-                <a href="#">Anos 60</a>   
+                <a href="#anos90">Anos 90</a>      
+                <a href="#anos80">Anos 80</a>   
+                <a href="#anos70">Anos 70</a>   
+                <a href="#anos60">Anos 60</a>   
             </div>
         </nav>
-    </head>
+    </header>
     <main>
-        <div class="container-filme">
-            <div class="container">
+        <div class="container">
+            <div>
                 <h3 class="title">O Poderoso Chefão</h3>
                 <p class="descrip">Em 1945, Don Corleone é o chefe de uma mafiosa 
                     família italiana de Nova York. Ele costuma apadrinhar várias pessoas,
@@ -33,12 +37,112 @@
                     Com a chegada das drogas, as famílias começam uma disputa pelo promissor mercado.
                 </p>
                 <div class="bts">
-                    <Button  class="bt">Play</Button>
-                    <button role="button" class="bt" >Trailer</button>
+                    <Button  class="bt">
+                        <i class="fa-solid fa-play"></i>
+                        Play
+                    </Button>
+                    <a href="https://www.youtube.com/watch?v=0v6MO0EB7UY" target="_blank">
+                        <button role="button" class="bt">
+                            <i class="fa-solid fa-film"></i>
+                            Trailer
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
     </main>
 
+    <section nome="anos 60" id="anos60">
+        <h2 class="container">Filmes anos 60</h2>
+        <div class="owl-carousel owl-theme">
+            <img src="img/60's/min1.jpg" alt="">
+            <img src="img/60's/min2.jpg" alt="">
+            <img src="img/60's/min3.jpg" alt="">
+            <img src="img/60's/min4.jpg" alt="">
+            <img src="img/60's/min5.jpg" alt="">
+            <img src="img/60's/min6.jpg" alt="">
+            <img src="img/60's/min7.jpg" alt="">
+            <img src="img/60's/min8.jpg" alt="">
+            <img src="img/60's/min9.jpg" alt="">
+            <img src="img/60's/min10.jpg" alt="">
+            <img src="img/60's/min11.jpg" alt="">
+            <img src="img/60's/min12.jpg" alt="">
+            <img src="img/60's/min13.jpg" alt="">
+            <img src="img/60's/min14.jpg" alt="">
+            <img src="img/60's/min15.jpg" alt="">
+            <img src="img/60's/min16.jpg" alt="">
+        </div>
+    </section>
+
+    <section nome="anos 70" id="anos70">
+        <h2 class="container">Filmes anos 70</h2>
+        <div class="owl-carousel owl-theme">
+            <img src="img/70's/min1.jpg" alt="">
+            <img src="img/70's/min2.jpg" alt="">
+            <img src="img/70's/min3.jpg" alt="">
+            <img src="img/70's/min4.jpg" alt="">
+            <img src="img/70's/min5.jpg" alt="">
+            <img src="img/70's/min6.jpg" alt="">
+            <img src="img/70's/min7.jpg" alt="">
+            <img src="img/70's/min8.jpg" alt="">
+            <img src="img/70's/min9.jpg" alt="">
+            <img src="img/70's/min10.jpg" alt="">
+            <img src="img/70's/min11.jpg" alt="">
+            <img src="img/70's/min12.jpg" alt="">
+            <img src="img/70's/min13.jpg" alt="">
+            <img src="img/70's/min14.jpg" alt="">
+            <img src="img/70's/min15.jpg" alt="">
+            <img src="img/70's/min16.jpg" alt="">
+        </div>
+    </section>
+
+    <section nome="anos 80" id="anos80">
+        <h2 class="container">Filmes anos 80</h2>
+        <div class="owl-carousel owl-theme">
+            <img src="img/80's/min1.jpg" alt="">
+            <img src="img/80's/min2.jpg" alt="">
+            <img src="img/80's/min3.jpg" alt="">
+            <img src="img/80's/min4.jpg" alt="">
+            <img src="img/80's/min5.jpg" alt="">
+            <img src="img/80's/min6.jpg" alt="">
+            <img src="img/80's/min7.jpg" alt="">
+            <img src="img/80's/min8.jpg" alt="">
+            <img src="img/80's/min9.jpg" alt="">
+            <img src="img/80's/min10.jpg" alt="">
+            <img src="img/80's/min11.jpg" alt="">
+            <img src="img/80's/min12.jpg" alt="">
+            <img src="img/80's/min13.jpg" alt="">
+            <img src="img/80's/min14.jpg" alt="">
+            <img src="img/80's/min15.jpg" alt="">
+            <img src="img/80's/min16.jpg" alt="">
+        </div>
+    </section>
+
+    <section nome="anos 90" id="anos90">
+        <h2 class="container">Filmes anos 90</h2>
+        <div class="owl-carousel owl-theme">
+            <img src="img/90's/min1.jpg" alt="">
+            <img src="img/90's/min2.jpg" alt="">
+            <img src="img/90's/min3.jpg" alt="">
+            <img src="img/90's/min4.jpg" alt="">
+            <img src="img/90's/min5.jpg" alt="">
+            <img src="img/90's/min6.jpg" alt="">
+            <img src="img/90's/min7.jpg" alt="">
+            <img src="img/90's/min8.jpg" alt="">
+            <img src="img/90's/min9.jpg" alt="">
+            <img src="img/90's/min10.jpg" alt="">
+            <img src="img/90's/min11.jpg" alt="">
+            <img src="img/90's/min12.jpg" alt="">
+            <img src="img/90's/min13.jpg" alt="">
+            <img src="img/90's/min14.jpg" alt="">
+            <img src="img/90's/min15.jpg" alt="">
+            <img src="img/90's/min16.jpg" alt="">        
+        </div>
+    </section>
+
+    <script src="https://kit.fontawesome.com/fac052e016.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/Setup.js"></script>
 </body>
 </html>
